with contracts